--- a/Web/login.html
+++ b/Web/login.html
@@ -37,7 +37,11 @@
       <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test" class="active">LOGIN</a>
     </div>
   </header>
-  
+  <div class="w-[422px] h-[503px] bg-white rounded-[10px] shadow mx-96 my-28">
+    <div class="text-black text-xs font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Email:</strong></div>
+    <form class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 "></form>
+
+  </div>
 
   </div>
 </body>
