adicionado formularios do login

--- a/Web/login.html
+++ b/Web/login.html
@@ -38,9 +38,23 @@
     </div>
   </header>
   <div class="w-[422px] h-[503px] bg-white rounded-[10px] shadow mx-96 my-28">
-    <div class="text-black text-xs font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Email:</strong></div>
-    <form class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 "></form>
-
+    <div class="text-black text-sm font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Email:</strong></div>
+    <input type="text" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10" placeholder="seumelhoremail@provedor.com"></input>
+    <div class="text-black text-sm font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Senha:</strong></div>
+    <input type="password" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 " placeholder="Senha"></input>
+    <div class="text-black text-sm font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Nome:</strong></div>
+    <input type="text" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 " placeholder="Nome e Sobrenome"></input>
+    <div class="text-black text-sm font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>CPF/CNPJ:</strong></div>
+    <input type="text" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 " placeholder="CPF/CNPJ"></input>
+    <div class="text-black text-sm font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Telefone:</strong></div>
+    <input type="text" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 " placeholder="(xx) xxxxx-xxxx"></input>
+    <div class="text-black text-sm font-normal font-['Inter'] mx-10 pt-3 pb-1"><strong>Endereço:</strong></div>
+    <input type="text" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px] mx-10 " placeholder="Rua, número, complemento"></input>
+    <div class="mt-4 mx-8">
+    <input type="checkbox" class="bg-zinc-300 mx-2"></input> <span class="text-sm text-blue-800 font-bold">Concordo com os termos de uso</span>
+    </div>
+    <div class="w-[422px] flex mx-auto">
+      <button type="submit" id="btn-cadastrar" class="rounded-[10px] font-bold text-lg shadow mx-auto mt-4">Cadastrar</button>    </div>
   </div>
 
   </div>
