Corrigido algumas referencias

--- a/Web/index.html
+++ b/Web/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./login_files/saved_resource"></script>
+  <script src="./js/saved_resource"></script>
   <script>
     tailwind.config = {
       theme: {
@@ -25,7 +25,7 @@
   <div class="banner bg-local">
     <header id="header" class="flex justify-between	px-16 pt-8">
       <div>
-        <img id="logo" src="login_files/logo.png" alt="movEasy">
+        <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
 
       <div class="menu">
@@ -37,7 +37,7 @@
         <a href="./login.html">LOGIN</a>
       </div>
     </header>
-    <div class="m-28 text-2xl">
+    <div class="m-28 text-4xl">
         <span class="texto">QUER SE MUDAR?</span><BR>
         <span class="texto">DEIXE QUE CUIDAMOS DISSO PARA VOCÊ</span>
     </div>
