Ajustando menu-login

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+
     <div class="banner bg-local">
         <header id="header" class="flex justify-between	px-16 pt-8">
             <div>
@@ -38,8 +39,12 @@
 
         </header>
         
-    
-</div>
+    </div>
+    <div class="corpo">
+        <div class="menu-login w-[480px] h-[350px]">
+
+        </div>
+    </div>
 </body>
 
 </html>
