--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -38,10 +38,24 @@
             </div>
 
         </header>
-        
+
     </div>
     <div class="corpo">
         <div class="menu-login w-[480px] h-[350px]">
+            <div>
+                <div>
+                    <label for="login-email"
+                        class="text-black text-sm font-normal font-['Inter']"><strong>Email:</strong></label>
+                    <input type="email" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px]" required
+                        placeholder="Digite seu melhor e-mail"></input>
+                </div>
+                <div>
+                    <label for="login-senha"
+                        class="text-black text-sm font-normal font-['Inter']"><strong>Senha:</strong></label>
+                    <input type="password" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px]" required
+                        placeholder="Senha"></input>
+                </div>
+            </div>
 
         </div>
     </div>
