--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -42,18 +42,22 @@
     </div>
     <div class="corpo">
         <div class="menu-login w-[480px] h-[350px]">
-            <div>
+            <div class="controlador-login">
                 <div>
                     <label for="login-email"
-                        class="text-black text-sm font-normal font-['Inter']"><strong>Email:</strong></label>
+                        class="text-black text-lg py-10 font-normal font-['Inter']"><strong>Email:</strong></label>
                     <input type="email" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px]" required
-                        placeholder="Digite seu melhor e-mail"></input>
+                        placeholder="Digite o seu email"></input>
                 </div>
                 <div>
                     <label for="login-senha"
-                        class="text-black text-sm font-normal font-['Inter']"><strong>Senha:</strong></label>
+                        class="text-black text-lg py-10 font-normal font-['Inter']"><strong>Senha:</strong></label>
                     <input type="password" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px]" required
-                        placeholder="Senha"></input>
+                        placeholder="Digite a sua senha"></input>
+                </div>
+
+                <div>
+                    <button class ="recuperar-senha text-black text-lg py-10 font-normal font-['Inter']"> Esqueceu a senha?</button>
                 </div>
             </div>
 
