--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -26,16 +26,18 @@
         <header id="header" class="flex justify-between	px-16 pt-8">
             <div>
                 <img id="logo" src="./login_files/logo.png" alt="movEasy">
+            </div>
 
-            </div>
-            <div class="menu">
-                <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test">AGENDAR</a>
-                <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test">HOME</a>
-                <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test">SOBRE</a>
-                <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test">FAQ</a>
-                <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test">SUPORTE</a>
-                <a href="file:///C:/Users/victor.mariano/Documents/movEasy/test" class="active">LOGIN</a>
-            </div>
+                <div class="menu-list font-bold text-3xl md:hidden mt-16"> ||| </div>
+                <div class="menu md:flex hidden">
+                    <a href="./agendar.html">AGENDAR</a>
+                    <a href="./index.html">HOME</a>
+                    <a href="./sobre.html" class="active">SOBRE</a>
+                    <a href="./faq.html">FAQ</a>
+                    <a href="./suporte.html">SUPORTE</a>
+                    <a href="./login-usuario.html">LOGIN</a>
+                </div>
+            
 
         </header>
 
@@ -43,7 +45,7 @@
     <div class="corpo">
         <div class="menu-login w-[480px] h-[350px]">
             <div class="controlador-login">
-                <div>
+                <div class="input py-10">
                     <label for="login-email"
                         class="text-black text-lg py-10 font-normal font-['Inter']"><strong>Email:</strong></label>
                     <input type="email" class="w-[308px] h-[29px] bg-zinc-300 rounded-[10px]" required
@@ -57,7 +59,8 @@
                 </div>
 
                 <div>
-                    <button class ="recuperar-senha text-black text-lg py-10 font-normal font-['Inter']"> Esqueceu a senha?</button>
+                    <button class="recuperar-senha text-black text-lg py-10 font-normal font-['Inter']"> Esqueceu a
+                        senha?</button>
                 </div>
             </div>
 
