--- a/Web/index.html
+++ b/Web/index.html
@@ -27,8 +27,8 @@
       <div>
         <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
-
-      <div class="menu">
+      <div class="menu-mobile font-bold text-3xl"> ||| </div>
+      <div class="menu-desktop">
         <a href="./agendar.html">AGENDAR</a>
         <a href="./index.html" class="active">HOME</a>
         <a href="./sobre.html">SOBRE</a>
