Adicionado mensagens ao FAQ

--- a/Web/faq.html
+++ b/Web/faq.html
@@ -38,10 +38,10 @@
         <a href="./login.html">LOGIN</a>
       </div>
     </header>
-    <div id="faq" class="m-28 text-4xl">
+    <div id="faq" class="ml-4 sm:ml-14 md:ml-20 lg:ml-28 mt-28 ">
       <div id="modelo" class="item hidden">
-        <a class="pergunta">Pergunta...</a>
-        <a class="resposta">Resposta...</a>
+        <a class="pergunta text-4xl">Pergunta...</a>
+        <a class="resposta text-2xl">Resposta...</a>
       </div>
     </div>
 
