padronização do botão login com css

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -42,7 +42,7 @@
         </header>
 
     </div>
-
+<form action="">
     <div class="corpo flex flex-col">
         <div class="menu-login w-[450px] h-[450px]">
             <div class="controlador-login py-10">
@@ -73,13 +73,14 @@
                 </div>
             </div>
 
-            <div class="w-[422px]">
+            <div >
                 <button type="submit" id="btn-logar" class="rounded-[10px] font-bold text-lg shadow">Login</button>
               </div>
 
         </div>  
         </div>
     </div>
+</form>
 </body>
 
 </html>
