--- a/Web/sobre.html
+++ b/Web/sobre.html
@@ -23,20 +23,21 @@
 </head>
 
 <body>
-    <header id="header" class="flex justify-between	px-16 pt-8">
-        <div>
-            <img id="logo" src="./login_files/logo.png" alt="movEasy">
-        </div>
-        <div class="menu-list font-bold text-3xl md:hidden mt-16"> ||| </div>
-        <div class="menu md:flex hidden">
+    <div class="banner bg-local">
+        <header id="header" class="flex justify-between	px-16 pt-8">
+          <div>
+            <img id="logo" src="assets/images/logo.png" alt="movEasy">
+          </div>
+          <div class="menu-mobile font-bold text-3xl"> ||| </div>
+          <div class="menu-desktop">
             <a href="./agendar.html">AGENDAR</a>
-            <a href="./index.html">HOME</a>
+            <a href="./index.html" >HOME</a>
             <a href="./sobre.html" class="active">SOBRE</a>
             <a href="./faq.html">FAQ</a>
             <a href="./suporte.html">SUPORTE</a>
-            <a href="./login-usuario.html">LOGIN</a>
-        </div>
-    </header>
+            <a href="./login.html">LOGIN</a>
+          </div>
+        </header>
     <div class="ml-8">
         <div>
             <p class="text-3xl font-bold my-4 mx-24">
@@ -45,7 +46,7 @@
         </div>
         <div class="grid grid-cols-2">
             <div class="background-image"></div>
-            <div class="texto mr-8">
+            <div class="texto mr-16">
                 <p class="">
                     Somos um grupo de cinco amigos que se uniu para criar uma empresa com o objetivo de
                     facilitar
@@ -69,7 +70,7 @@
 
             </div>
         </div>
-        <div id="quote-center" class="mt-16 text-2xl">
+        <div id="quote-center" class="my-16 text-2xl">
             <span>
                 <strong>
                     &quot;Nossa plataforma oferece uma solução completa e segura,
@@ -77,7 +78,7 @@
                 </strong>
             </span>
         </div>
-        <div id="background-bottom" class="m-8 ">
+        <div id="background-bottom" class="my-16">
 
         </div>
     </div>
