--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -5,9 +5,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+  <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/Suporte.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./login_files/saved_resource"></script>
+  <script src="./js/saved_resource"></script>
   <script>
     tailwind.config = {
       theme: {
@@ -25,15 +26,15 @@
   <div class="banner bg-local">
     <header id="header" class="flex justify-between	px-16 pt-8">
       <div>
-        <img id="logo" src="./login_files/logo.png" alt="movEasy">
+        <img id="logo" src="./assets/images/logo.png" alt="movEasy">
       </div>
-
-      <div class="menu">
-        <a href="./Agendar.html">AGENDAR</a>
+      <div class="menu-mobile font-bold text-3xl"> ||| </div>
+      <div class="menu-desktop">
+        <a href="./agendar.html">AGENDAR</a>
         <a href="./index.html">HOME</a>
-        <a href="./Sobre.html">SOBRE</a>
-        <a href="./Faq.html">FAQ</a>
-        <a href="./suporte.html"class="active">SUPORTE</a>
+        <a href="./sobre.html">SOBRE</a>
+        <a href="./faq.html">FAQ</a>
+        <a href="./suporte.html" class="active">SUPORTE</a>
         <a href="./login.html">LOGIN</a>
       </div>
     </header>
