adicionado auxilio para cadastro

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -42,45 +42,52 @@
         </header>
 
     </div>
-<form action="">
-    <div class="corpo flex flex-col">
-        <div class="menu-login w-[450px] h-[450px]">
-            <div class="controlador-login py-10">
-                <div class="input-login py-5">
-                    <label for="login-email"
-                        class="text-black text-lg py-10 font-normal font-['Inter']"><strong>Email:</strong></label>
-                    <input type="email" class="w-[300px] h-[30px] bg-zinc-300 rounded-[10px]" required
-                        placeholder="Digite o seu email"></input>
+    <form action="">
+        <div class="corpo flex flex-col">
+            <div class="menu-login w-[450px] h-[450px]">
+                <div class="controlador-login ">
+                    <div class="input-login py-5">
+                        <label for="login-email"
+                            class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
+                        <input type="email" class="w-[300px] h-[30px] bg-zinc-300 rounded-[10px]" required
+                            placeholder="Digite o seu email"></input>
+                    </div>
+                    <div>
+                        <label for="login-senha"
+                            class="text-black text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
+                        <input type="password" class="w-[300px] h-[30px] bg-zinc-300 rounded-[10px]" required
+                            placeholder="Digite a sua senha"></input>
+                    </div>
                 </div>
+
                 <div>
-                    <label for="login-senha"
-                        class="text-black text-lg py-10 font-normal font-['Inter']"><strong>Senha:</strong></label>
-                    <input type="password" class="w-[300px] h-[30px] bg-zinc-300 rounded-[10px]" required
-                        placeholder="Digite a sua senha"></input>
+                    <button type="submit" id="btn-logar" class="rounded-[10px] font-bold text-lg shadow">Login</button>
                 </div>
+                <div class="grid grid-cols-2 ">
+                    <div class=" mx-8 mt-4">
+                        <input type="checkbox" class="bg-zinc-300"></input>
+                        <span class="text-sm text-blue-800 font-bold" required placeholder="Manter conectado">Manter
+                            conectado?</span>
+
+                    </div>
+                    <div class="recuperar-senha mx-8">  
+                        <button class="recuperar-senha text-black text-lg py-4 font-normal font-['Inter']">
+                            Esqueceu a senha?</button>
+                    </div>
+                </div>
+
+                <div class="texto-cadastro text-black text-lg font-normal font-['Inter']">Nao possui cadastro?</div>
+
+                <div>
+                    <button type="submit" id="btn-cadastrar"
+                    class="rounded-[10px] font-bold text-lg shadow">Cadastrar</button>
+                </div>
+
+
             </div>
-
-            <div class="grid grid-cols-2 ">
-                <div class=" mx-8 mt-10">
-                    <input type="checkbox" class="bg-zinc-300"></input>
-                    <span class="text-sm text-blue-800 font-bold"  required placeholder="Manter conectado">Manter conectado?</span>
- 
-                </div>
-                <div class="mx-8 mt-0">
-                    <button class="recuperar-senha text-black text-lg py-10 font-normal font-['Inter']">
-                        Esqueceu a
-                        senha?</button>
-                </div>
-            </div>
-
-            <div >
-                <button type="submit" id="btn-logar" class="rounded-[10px] font-bold text-lg shadow">Login</button>
-              </div>
-
-        </div>  
         </div>
-    </div>
-</form>
+        </div>
+    </form>
 </body>
 
 </html>
