estetica dos nomes

--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -39,9 +39,9 @@
       </div>
     </header>
     <div class="my-28">
-      <form action="/formulario-cadastro-cliente" method="post">
+      <form action="/formulario-suporte" method="post">
  
-        <div class="info-boxes-login">
+        <div class="info-boxes-suporte">
           <label for="formulario-nome">Nome:</label>
           <input type="Nome" required placeholder="Nome"></input>
  
