--- a/Web/sobre.html
+++ b/Web/sobre.html
@@ -28,7 +28,17 @@
           <div>
             <img id="logo" src="assets/images/logo.png" alt="movEasy">
           </div>
-          <div class="menu-mobile font-bold text-3xl"> ||| </div>
+          <div class="menu-mobile">
+            <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+            <div class="menu-mobile-links">
+                <a href="./agendar.html">AGENDAR</a>
+                <a href="./index.html" >HOME</a>
+                <a href="./sobre.html" class="active">SOBRE</a>
+                <a href="./faq.html">FAQ</a>
+                <a href="./suporte.html">SUPORTE</a>
+                <a href="./login.html">LOGIN</a>
+              </div>
+          </div>
           <div class="menu-desktop">
             <a href="./agendar.html">AGENDAR</a>
             <a href="./index.html" >HOME</a>
