--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -38,7 +38,7 @@
         <a href="./login.html">LOGIN</a>
       </div>
     </header>
-    <div class="my-28 Formulario">
+    <div class="FormularioSuporte">
       <form action="/formulario-suporte" method="post">
  
         <div class="info-boxes-suporte">
