header das paginas atualizado

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -25,20 +25,28 @@
     <div class="banner bg-local">
         <header id="header" class="flex justify-between	px-16 pt-8">
             <div>
-                <img id="logo" src="./login_files/logo.png" alt="movEasy">
+                <img id="logo" src="assets/images/logo.png" alt="movEasy">
             </div>
-
-            <div class="menu-list font-bold text-3xl md:hidden mt-16"> ||| </div>
-            <div class="menu md:flex hidden">
-                <a href="./agendar.html">AGENDAR</a>
+            <div class="menu-mobile">
+                <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+                <div class="menu-mobile-links">
+                    <img id="" src="./assets/images/logo_original.png" alt="movEasy">
+                    <a href="./index.html">HOME</a>
+                    <a href="./agendar.html">AGENDAR</a>
+                    <a href="./sobre.html" >SOBRE</a>
+                    <a href="./faq.html">FAQ</a>
+                    <a href="./suporte.html">SUPORTE</a>
+                    <a href="./login.html" class="active">LOGIN</a>
+                </div>
+            </div>
+            <div class="menu-desktop">
                 <a href="./index.html">HOME</a>
+                <a href="./agendar.html">AGENDAR</a>
                 <a href="./sobre.html" class="active">SOBRE</a>
                 <a href="./faq.html">FAQ</a>
                 <a href="./suporte.html">SUPORTE</a>
-                <a href="./login-usuario.html">LOGIN</a>
+                <a href="./login.html">LOGIN</a>
             </div>
-
-
         </header>
 
     </div>
