--- a/Web/faq.html
+++ b/Web/faq.html
@@ -26,18 +26,29 @@
   <div class="banner bg-local">
     <header id="header" class="flex justify-between	px-16 pt-8">
       <div>
-        <img id="logo" src="assets/images/logo.png" alt="movEasy">
+          <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
-      <div class="menu-mobile font-bold text-3xl"> ||| </div>
+      <div class="menu-mobile">
+          <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+          <div class="menu-mobile-links">
+              <img id="" src="./assets/images/logo_original.png" alt="movEasy">
+              <a href="./index.html">HOME</a>
+              <a href="./agendar.html">AGENDAR</a>
+              <a href="./sobre.html" >SOBRE</a>
+              <a href="./faq.html"class="active">FAQ</a>
+              <a href="./suporte.html">SUPORTE</a>
+              <a href="./login.html">LOGIN</a>
+          </div>
+      </div>
       <div class="menu-desktop">
-        <a href="./agendar.html">AGENDAR</a>
-        <a href="./index.html">HOME</a>
-        <a href="./sobre.html">SOBRE</a>
-        <a href="./faq.html" class="active">FAQ</a>
-        <a href="./suporte.html">SUPORTE</a>
-        <a href="./login.html">LOGIN</a>
+          <a href="./index.html">HOME</a>
+          <a href="./agendar.html">AGENDAR</a>
+          <a href="./sobre.html" >SOBRE</a>
+          <a href="./faq.html" class="active">FAQ</a>
+          <a href="./suporte.html">SUPORTE</a>
+          <a href="./login.html">LOGIN</a>
       </div>
-    </header>
+  </header>
     <div id="faq" class="ml-4 sm:ml-14 md:ml-20 lg:ml-28 mt-28 ">
       <div id="modelo" class="item hidden">
         <a class="pergunta text-4xl">Pergunta...</a>
