--- a/Web/index.html
+++ b/Web/index.html
@@ -25,18 +25,29 @@
   <div class="banner bg-local">
     <header id="header" class="flex justify-between	px-16 pt-8">
       <div>
-        <img id="logo" src="assets/images/logo.png" alt="movEasy">
+          <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
-      <div class="menu-mobile font-bold text-3xl"> ||| </div>
+      <div class="menu-mobile">
+          <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+          <div class="menu-mobile-links">
+              <img id="" src="./assets/images/logo_original.png" alt="movEasy">
+              <a href="./index.html" class="active">HOME</a>
+              <a href="./agendar.html">AGENDAR</a>
+              <a href="./sobre.html">SOBRE</a>
+              <a href="./faq.html">FAQ</a>
+              <a href="./suporte.html">SUPORTE</a>
+              <a href="./login.html">LOGIN</a>
+          </div>
+      </div>
       <div class="menu-desktop">
-        <a href="./agendar.html">AGENDAR</a>
-        <a href="./index.html" class="active">HOME</a>
-        <a href="./sobre.html">SOBRE</a>
-        <a href="./faq.html">FAQ</a>
-        <a href="./suporte.html">SUPORTE</a>
-        <a href="./login.html">LOGIN</a>
+          <a href="./index.html" class="active">HOME</a>
+          <a href="./agendar.html">AGENDAR</a>
+          <a href="./sobre.html">SOBRE</a>
+          <a href="./faq.html">FAQ</a>
+          <a href="./suporte.html">SUPORTE</a>
+          <a href="./login.html">LOGIN</a>
       </div>
-    </header>
+  </header>
     <div class="m-28 text-4xl">
         <span class="texto">QUER SE MUDAR?</span><BR>
         <span class="texto">DEIXE QUE CUIDAMOS DISSO PARA VOCÊ</span>
